--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,4 +33,9 @@ jobs:
         run: 'gcloud info'
 
       - name: Build and push
-        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-481510/notely-ar-repo/notely:0.0.1
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-481510/notely-ar-repo/notely:0.0.2
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-481510/notely-ar-repo/notely:0.0.2 \
+          --region us-central1 --allow-unauthenticated --project notely-481510 --max-instances=4
