--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Check out code
@@ -32,8 +34,16 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
 
+      - name: 'Install goose'
+        run: |
+          go install github.com/pressly/goose/v3/cmd/goose@latest
+          goose -version
+
       - name: Build and push
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-481510/notely-ar-repo/notely:0.0.2
+
+      - name: 'Migrate DB'
+        run: scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: |
